RESOLVED FIXED117370
Whitespace between inlines with nowrap and a shrink-to-fit parent line-break incorrectly
https://bugs.webkit.org/show_bug.cgi?id=117370
Summary Whitespace between inlines with nowrap and a shrink-to-fit parent line-break ...
Robert Hogan
Reported 2013-06-08 06:53:49 PDT
<!DOCTYPE html> <html> <style> #container { float: right; } .link { white-space: nowrap; } </style></head> <body> <div id="container"> <a href="" class="link">A</a> <a href="" class="link">B </a> </div>
Attachments
Patch (7.12 KB, patch)
2013-06-09 03:35 PDT, Robert Hogan
no flags
Patch (7.66 KB, patch)
2013-06-09 05:35 PDT, Robert Hogan
no flags
Patch (9.84 KB, patch)
2013-06-10 13:22 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2013-06-09 03:35:14 PDT
Robert Hogan
Comment 2 2013-06-09 05:35:55 PDT
Alexey Proskuryakov
Comment 3 2013-06-09 18:26:10 PDT
Comment on attachment 204118 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204118&action=review > Source/WebCore/ChangeLog:3 > + Whitespace between inlines with nowrap and a shrink-to-fit parent line-break incorrectly I cannot parse this sentence, it has no verb. Could you please tweak it for readability?
Robert Hogan
Comment 4 2013-06-10 13:22:10 PDT
Dave Hyatt
Comment 5 2013-06-12 11:26:47 PDT
Comment on attachment 204182 [details] Patch r=me
WebKit Commit Bot
Comment 6 2013-06-12 12:20:45 PDT
Comment on attachment 204182 [details] Patch Clearing flags on attachment: 204182 Committed r151518: <http://trac.webkit.org/changeset/151518>
WebKit Commit Bot
Comment 7 2013-06-12 12:20:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.